--- a/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
@@ -1,10 +1,36 @@
 <h1>Contratos</h1>
 
+<!-- Filtros y búsqueda -->
+<div style="display: flex; align-items: center; gap: 150px;">
+  <div>
+    <label for="campoOrden" style="margin-right: 10px;">Selecciona una opción:</label>
+    <select id="campoOrden" [(ngModel)]="campoOrden" class="combo-box">
+      <option value="nombre">Nombre del Contrato</option>
+      <option value="fecha_inicio">Fecha de inicio</option>
+      <option value="fecha_termino">Fecha de Término</option>
+      <option value="proveedor">Proveedor</option>
+      <option value="ito">Ito</option>
+    </select>
+  </div>
+  <div>
+    <label for="orden" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
+    <select id="orden" [(ngModel)]="orden" class="combo-box">
+      <option value="asc">De Primero al Último</option>
+      <option value="desc">De Último al Primero</option>
+    </select>
+  </div>
+  <button class="combo-box" (click)="filtrarContratos()">Buscar</button>
+</div>
+
+<div style="height: 30px"></div>
+
 <div class="botonesCrud-container">
   <button class="botonesCrud" (click)="abrirModalContratoCrear()">Crear Contrato</button>
   <button class="botonesCrud" (click)="actualizarContrato()">Actualizar Contrato</button>
   <button class="botonesCrud" (click)="eliminarContrato()">Eliminar Contrato</button>
 </div>
+
+<div style="height: 50px"></div>
 
 <table>
   <thead>
@@ -32,6 +58,14 @@
   </tr>
   </tbody>
 </table>
+
+<div style="height: 50px"></div>
+
+<!-- Paginación -->
+<div style="display: flex; justify-content: space-between; width: 100%;">
+  <button class="buttons" style="flex: 1; margin-right: 10px; " (click)="gestionPaginas('anterior')">Página Anterior</button>
+  <button class="buttons" style="flex: 1;" (click)="gestionPaginas('siguiente')">Página Siguiente</button>
+</div>
 
 <!-- ================================================          MODALES          =========================================================================-->
 
