--- a/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
@@ -154,8 +154,11 @@
     <span class="cerrar" (click)="cerrarModalEliminar()">&times;</span>
     <h2>¿Está seguro de que desea eliminar los siguientes contratos?</h2>
 
+    <!-- Mostrar los nombres de los contratos a eliminar -->
     <ul>
-       (ID: {{ idsContratosEliminar }})
+      <li *ngFor="let contrato of contratosAEliminar">
+        (Contrato: {{ contrato.nombre }})
+      </li>
     </ul>
 
     <div class="botones">
@@ -164,5 +167,7 @@
     </div>
   </div>
 </div>
+
+
 
 
