Crud "READ" de documentos
+Fue corregido el crud de "read" los documetnos, ahora muestran su respectivo tipo de documento y contrato asociado

--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -54,10 +54,13 @@
     <td>{{ documento.hora_subida }}</td>
     <td>{{ documento.tipo_documento }}</td>
     <td>{{ documento.contrato }}</td>
-    <td> <button class="botonesCrud">Acceso al documento</button> </td>
+    <td>
+      <button class="botonesCrud">Acceso al documento</button>
+    </td>
   </tr>
   </tbody>
 </table>
+
 
 <div style="height: 50px"></div>
 
