crud "Read" de itos
+Fue actualizado el crud read de itos y ahora carga el nombre del área al que corresponde

--- a/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
@@ -41,7 +41,7 @@
     <td>Apellido</td>
     <td>Teléfono</td>
     <td>Correo</td>
-    <td>Area</td>
+    <td>Área</td>
   </tr>
   </thead>
   <tbody>
@@ -53,10 +53,11 @@
     <td>{{ ito.apellido }}</td>
     <td>{{ ito.telefono }}</td>
     <td>{{ ito.correo }}</td>
-    <td>{{ ito.area }}</td>
+    <td>{{ ito.area }}</td> <!-- Ahora muestra el nombre del área -->
   </tr>
   </tbody>
 </table>
+
 
 <div style="height: 50px"></div>
 
